# Gate-Result-Scraper

./: .gitignore  Dockerfile  README.md  patch_db2.py  patch_tab4.py  pyproject.toml  requirements.txt  streamlit_app.py  test_one.py
data/: Data.csv  credentials.csv
gate_automation/: __init__.py  main.py
gate_automation/core/: __init__.py  interfaces.py  models.py  services.py
gate_automation/infrastructure/: csv_loader.py  database.py  sinks.py
gate_automation/infrastructure/browser/: __init__.py  playwright_client.py
gate_automation/infrastructure/captcha/: factory.py  solvers.py
gate_automation/tests/: test_math_parser.py
output/: gate_results.db
workspaces/Gate 2026/: config.json  data.csv  gate_results.db
