[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gate-portal-automation"
version = "0.1.0"
description = "GATE portal login and result extraction automation"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "playwright==1.53.0",
    "opencv-python-headless==4.12.0.88",
    "ddddocr==1.6.1",
    "streamlit>=1.30.0",
    "pandas>=2.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest==8.4.1",
]

[project.scripts]
gate-automation = "gate_automation.main:main"

[tool.pytest.ini_options]
testpaths = ["gate_automation/tests"]
